load all videos to page and add css styles

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
     <head> 
         <title>DANCE</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <video id="myVideo" width="650" controls>
-        </video>
+        <div class="video-container">
+            <video id="video1" class="my-video" src="videos/video1.mp4" autoplay>
+            </video>
+            <video id="video2" class="my-video" src="videos/video2.mp4" autoplay>
+            </video>
+            <video id="video3" class="my-video" src="videos/video3.mp4" autoplay>
+            </video>
+            <video id="video4" class="my-video" src="videos/video4.mp4" autoplay>
+            </video>
+            <video id="video5" class="my-video" src="videos/video5.mp4" autoplay>
+            </video>
+        </div>
     </body>
     <script src="main.js"></script>
 </html>
