create server.js to provide videofiles from folder and add pause/play with key press

--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
 		<link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="video-container">
-            <video id="video1" class="my-video" src="videos/video1.mp4" autoplay>
-            </video>
-            <video id="video2" class="my-video" src="videos/video2.mp4" autoplay>
-            </video>
-            <video id="video3" class="my-video" src="videos/video3.mp4" autoplay>
-            </video>
-            <video id="video4" class="my-video" src="videos/video4.mp4" autoplay>
-            </video>
-            <video id="video5" class="my-video" src="videos/video5.mp4" autoplay>
-            </video>
+        <div class="parent-container">
+            <div id="my-container" class="video-container">
+                <!--videos added here-->
+                all videos go here
+            </div>
+            <div id="pausedText" class="hidden">paused</div>
         </div>
+        
     </body>
     <script src="main.js"></script>
 </html>
