refactor main.js to use only one video element complete

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <body>
         <div class="parent-container">
             <div id="my-container" class="video-container">
-                <!--videos added here-->
-                all videos go here
+                <!--videos player goes here-->
             </div>
             <div id="pausedText" class="hidden">paused</div>
         </div>
