add _audio-normalize to force equivilent volumes on src/*.mp4; use two html video elements and cross-fade between

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <div class="parent-container">
-            <div id="my-container" class="video-container">
-                <!--videos player goes here-->
+            <div id="my-container">
+              <video class="my-video" id="video1" tabindex="0" controls></video>
+              <video class="my-video" id="video2" tabindex="0" controls></video>
+              <div id="pausedText">paused</div>
             </div>
-            <div id="pausedText" class="hidden">paused</div>
         </div>
-        
     </body>
     <script src="main.js"></script>
 </html>
