add loading screen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div class="parent-container">
+            <div id="loading" style="color:white">Loading videos...</div>
             <div id="my-container" class="video-container">
                 <!--videos added here-->
                 all videos go here
