switch to using two alternating video players

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <div class="parent-container">
             <div id="loading" style="color:white">Loading videos...</div>
             <div id="my-container" class="video-container">
-                <!--videos added here-->
-                all videos go here
+                <video id="video1" class="my-video" autoplay tabindex="0"></video>
+                <video id="video2" class="my-video" autoplay tabindex="0"></video>
             </div>
             <div id="pausedText" class="hidden">paused</div>
         </div>
